# nft_manager

./: .gitignore  Cargo.toml  README.md  nfts.db  tarpaulin-report.html
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/models/: category.rs  mod.rs  nft.rs
src/storage/: file_storage.rs
tests/: cli_tests.rs  main_tests.rs  mod.rs  nft_tests.rs  storage_tests.rs
