[package]
name = "nft_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.2", features = ["v4"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
predicates = "2.1"

[lib]
name = "nft_manager"
path = "src/lib.rs"

