[package]
name = "nft_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
bincode = "1.3"
uuid = { version = "1.2", features = ["v4"] }
thiserror = "1.0"
validator = { version = "0.14", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "nft_manager"
path = "src/lib.rs"

